Hack to fix bug with home page sign-up area breaking weirdly when window is stretched too wide; must revisit. (is this due to the footer fix?)

--- a/public/assets/css/_project-sass/_project-Base.scss
+++ b/public/assets/css/_project-sass/_project-Base.scss
@@ -51,7 +51,7 @@ a{
   @media (max-device-width:480px), screen and (max-width:800px){
     float:none;
     padding:0;
-    width:100%;
+    width:100% !important;
   }
 }
 
